test/parser/Queries/syntax_errors/fail_K-ForExprWithout-34.xq
(:****** ne ************** let ****** $ foo*****foo**** for *** let ********** $ ****: for 
(: Test: K-ForExprWithout-34  foo    let        where                   :
foo( let : Written by: Frans Englich  ne              ne     let      eq    )
(: Date: 2006-10-05T18:29:37+02:00       $                  :) where 
(: Purpose: Variable which isnot in scope.  ne   where      foo       foo:)
(:**** for ***** eq ********* where *** for *** where *********** $ *** $ ****************:)
$xs:NOTEXIST + 1foo